--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "author": "Dave",
   "license": "MIT",
   "scripts": {
-    "start": " node index.js",
-    "prestart": "tsc"
+    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.14",
+    "ts-node": "^9.1.1",
+    "tsc-watch": "^4.2.9",
+    "typescript": "^4.1.3"
   }
 }
